// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup Snapshots should render additional classes 1`] = `
<div>
  <div
    class="checkbox__group checkbox__group--horizontal other-class"
  >
    <label
      class="checkbox checkbox--md checkbox--primary other-class"
    >
      <input
        class="checkbox__input"
        type="checkbox"
        value=""
      />
      <span
        class="checkbox__control"
      >
        <svg
          class="checkbox__svg"
          fill="currentColor"
          height="20"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
          />
        </svg>
      </span>
      <div
        class="checkbox__text"
      >
        Checkbox
      </div>
    </label>
  </div>
</div>
`;

exports[`CheckboxGroup Snapshots should renders default component 1`] = `
<div>
  <div
    class="checkbox__group checkbox__group--horizontal"
  >
    <label
      class="checkbox checkbox--md checkbox--primary"
    >
      <input
        class="checkbox__input"
        type="checkbox"
        value=""
      />
      <span
        class="checkbox__control"
      >
        <svg
          class="checkbox__svg"
          fill="currentColor"
          height="20"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
          />
        </svg>
      </span>
      <div
        class="checkbox__text"
      >
        Checkbox
      </div>
    </label>
  </div>
</div>
`;
